--- a/src/Styles/featureBanner.css
+++ b/src/Styles/featureBanner.css
@@ -1,45 +1,16 @@
-.containerStyles{
-    width: 500px;
-    height: 280px;
+.containerBanner{
+    width: 100%;
+    height: 150px;
     margin: 0 auto;
+    margin-top: 10px;
 }
 .slideStyle{
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    background-position: center;
-    background-size: cover;
+    width: auto;
+    height: auto;
+    object-fit: cover;
+    object-position: 50% 50%;
 }
 .sliderStyle{
     height: 100%;
     position: relative;
-}
-.leftArrowStyle{
-    position: absolute;
-    top: 50%;
-    transform: translate(0,-50%);
-    left: 32px;
-    font-size: 45px;
-    color: #fff;
-    z-index: 1;
-    cursor: pointer;
-}
-.rightArrowStyle{
-    position: absolute;
-    top: 50%;
-    transform: translate(0,-50%);
-    right: 32px;
-    font-size: 45px;
-    color: #fff;
-    z-index: 1;
-    cursor:pointer,
-}
-.dotsContainerStyles{
-    display: flex;
-    justify-content: center;
-}
-.dotStyle{
-    margin: 0 3px;
-    cursor: pointer;
-    font-size: 40px;
 }
